@@ -2,8 +2,9 @@ transfer-ui (0.3.12.1) unstable; urgency=low
 
   * Fixes: NB#229506 - Transfer UI not launched in single attempt
   * Fixes: NB#239226 - Tranfer UI DBUS API has incorrect scope in API file
+  * Fixes: NB#239255 - Random TransferUI (raise abort) crash observed
 
- -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 24 Mar 2011 10:05:50 +0530
+ -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 24 Mar 2011 12:31:44 +0530
 
 transfer-ui (0.3.11.1) unstable; urgency=low
 
